--- a/Index.html
+++ b/Index.html
@@ -26,6 +26,9 @@
   <li><i>Third item</i></li>
     <li><i>Fourth item</i></li>
      </ul>
+     <img src="images/Tired.png" alt="tired" title="The word tired in red." width="100" hieght="100"/> <br>
+     <br>
+     <img src="images/jellyfish.gif" alt="jellyfish" title="Yea cool" width="450" height="300"/>
   </body>
 </html>
 
